gccida/g0/cselib_invalidate_mem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_mem/src/cselib.c:1611:25: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
htab_traverse_noresize( hash_table_0, ( htab_trav)cselib_invalidate_mem_1, mem_rtx); 
                        ^~~~~~~~~~~~
                        hash_table
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_mem/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_mem/src/obj/cselib.o] Error 1
